syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

option go_package = "gitlab.com/huseinnashr/pforder-backend/api/v1;v1";

service AccountService {
  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {
    option (google.api.http) = {
      post: "/orders:list",
      body: "*",
    };
  }
}

message PaginationRequest {
  string cursor = 1;
  int64 size = 2;
}

message PaginationResponse {
  string nextCursor = 1;
}

enum OrderType {
  ORDERTYPE_UNSPECIFIED = 0;
  ORDERTYPE_ASC = 1;
  ORDERTYPE_DESC = 2;
}

message ListOrderRequest {
  message Filter {
    // search order_name or product_name
    string search = 1;
    // RFC 3339
    google.protobuf.Timestamp start_date = 2;
    // RFC 3339
    google.protobuf.Timestamp end_date = 3;
  }

  Filter filters = 1;
  PaginationRequest pagination = 2;
  OrderType order_type = 3;
}

message ListOrderResponse {
  repeated Order orders = 1;
  PaginationResponse pagination = 2;
}

message Order {
  string order_name = 1;
  repeated string products = 2; 
  string customer_company_name = 3;
  string customer_name = 4;
  // RFC 3339
  google.protobuf.Timestamp order_date = 5;
  // 0.01 cent units
  int64 delivered_amount = 6;
  int64 total_amount = 7;
}